Minor styling changes

--- a/static_files/css/jobsignup.css
+++ b/static_files/css/jobsignup.css
@@ -1,3 +1,11 @@
+.search-group {
+    max-width: 400px;
+}
+
+.search-button {
+    padding: 5px 25px;
+}
+
 .joblist {
     display: flex;
     flex-direction: row;
@@ -11,7 +19,6 @@
 .job {
     display: block;
 
-    max-width: 400px;
     min-width: 320px;
 
     overflow-y: hidden;
@@ -39,22 +46,8 @@
     background-color: #9c9c9c;
 }
 
-.search-group {
-    max-width: 400px;
-}
-
-.search-button {
-    padding: 5px 25px;
-}
-
 .job-title {
     position: relative;
-}
-
-.job-title > h1 {
-    max-width: 300px;
-    text-overflow: ellipsis;
-    overflow: hidden;
 }
 
 .job-title > small {
@@ -62,6 +55,11 @@
     position: absolute;
 
     right: 0;
+    top: 0;
+}
+
+.job-title > h3 {
+    font-size: 140%;
 }
 
 .job-title > * {
