--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -6,7 +6,10 @@
 {% endblock head %}
 
 {% block content %}
-    <h1>{{ fadder.user.username }}</h1>
+    <div class="header">
+        <h1>{{ fadder.user.username }} - {{ fadder.points }}<span>p</span></h1>
+        <small>{{ fadder.user.email }}</small>
+    </div>
     <h2>Registrerade jobb</h2>
     {% for day, jobs in day_grouped.items %}
         <h4>{{ day }}</h4>
