--- a/static_files/css/profile.css
+++ b/static_files/css/profile.css
@@ -1,5 +1,9 @@
+.header {
+    margin-bottom: 20px;
+}
+
 h1 {
-    margin-bottom: 30px;
+    margin-bottom: 0;
 }
 
 h4 {
@@ -10,4 +14,8 @@ h4 {
 
 a {
     margin-left: 40px;
+}
+
+span {
+    text-transform: lowercase;
 }
