--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                         </a>
                         <span class="nav-link">/</span>
                     {% endif %}
-                    <a href="{% url 'accounts:my_profile' %}"
+                    <a href="{% url 'accounts:profile' user.username %}"
                        class="nav-link{% if request.resolver_match.view_name|startswith:'accounts:my_profile' %} active{% endif %}">
                         Min profil ({{ user.username }})
                     </a>
