--- a/static_files/css/base.css
+++ b/static_files/css/base.css
@@ -1,9 +1,13 @@
-.nav-item {
-    display: flex; !important
+body {
+    color: #333;
 }
 
 div .nav-item {
     margin: 0;
+}
+
+.nav-item {
+    display: flex; !important
 }
 
 .nav-link {
@@ -18,10 +22,14 @@ form > .nav-link {
     margin-left: 5px !important;
 }
 
-.content {
-    padding: 20px;
+.nav-link.active {
+    text-decoration: underline;
 }
 
-body {
-    color: #333;
+.nav-link:hover {
+    text-decoration: underline;
+}
+
+.content {
+    padding: 20px;
 }
