--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <script src="{% static 'bootstrap/bootstrap.bundle.min.js' %}"></script>
 {% block scripts %}{% endblock scripts %}
 
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Fadderjobb</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
