Add page titles

--- a/accounts/templates/accounts/my_profile.html
+++ b/accounts/templates/accounts/my_profile.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 
+{% block title %}Min profil - {% endblock title %}
+
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/my_profile.css' %}">
 {% endblock head %}
