--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}STABENs fadderjobbssida{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %}Fadderjobb</title>
     <link rel="stylesheet" href="{% static 'bootstrap/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/lux.bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
