--- a/templates/topchart.html
+++ b/templates/topchart.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 
+{% block title %}Topplistan - {% endblock title %}
+
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/topchart.css' %}">
 {% endblock head %}
