--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 
+{% block title %}Logga in - {% endblock title %}
+
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
