--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 
+{% block title %}{{ fadder.user.username }}'s profile - {% endblock title %}
+
 {% block head %}
     <link rel="stylesheet" href="{% static 'css/profile.css' %}">
 {% endblock head %}
