--- a/templates/jobdetails.html
+++ b/templates/jobdetails.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 
+{% block title %}{{ job.name }} - {% endblock title %}
+
 {% block head %}
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{% static 'css/jobdetails.css' %}">
