--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {% endblock head %}
 
 {% block content %}
-<h1>Välkommen!</h1>
+<h1>Välkommen</h1>
 
-Välkommen till STABENs fadderjobbsida. Här kan du anmäla dig till fadderjobb och se vilka pass andra faddrar har tagit.
+...till STABENs fadderjobbsida! Här kan du anmäla dig till fadderjobb och se vilka pass andra faddrar har tagit.
 {% endblock content %}
