Add class lowercase

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -9,7 +9,7 @@
 
 {% block content %}
     <div class="header">
-        <h1>{{ fadder.user.username }} - {{ fadder.points }}<span>p</span></h1>
+        <h1>{{ fadder.user.username }} - {{ fadder.points }}<span class="lowercase">p</span></h1>
         <small>{{ fadder.user.email }}</small>
     </div>
     <h2>Registrerade jobb</h2>
