--- a/templates/jobdetails.html
+++ b/templates/jobdetails.html
@@ -57,7 +57,7 @@
             </tr>
             <tr>
                 <td>Poäng</td>
-                <td>{{ job.points }}</td>
+                <td>{{ job.points }}p</td>
             </tr>
         </table>
         {% if user.is_authenticated and not user.is_staff %}
