--- a/templates/jobdetails.html
+++ b/templates/jobdetails.html
@@ -53,7 +53,7 @@
             </tr>
             <tr>
                 <td>Platser</td>
-                <td>{{ job.slots }}</td>
+                <td>{{ job.slots }} personer</td>
             </tr>
             <tr>
                 <td>Poäng</td>
