--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,16 @@
     </div>
 </nav>
 
+{% if messages %}
+    <div class="messages">
+        {% for message in messages %}
+            <div class="alert alert-info" role="alert">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+
 <div class="content">
     {% block content %}{% endblock content %}
 </div>
