--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap/lux.bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'open-iconic/font/css/open-iconic-bootstrap.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
     {% block head %}{% endblock head %}
 </head>
 <body>
