--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
 <script src="{% static 'js/base.js' %}"></script>
 {% block scripts %}{% endblock scripts %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Fadderjobb</a>
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <a class="navbar-brand" href="/"><img src="{% static '/logo.png' %}">Fadderjobb</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
