Add github link

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap/lux.bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'open-iconic/font/css/open-iconic-bootstrap.css' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static '/favicon.ico' %}"/>
+    <link rel="icon" type="image/x-icon" href="{% static '/favicon.ico' %}"/>
     {% block head %}{% endblock head %}
 </head>
 <body>
@@ -21,7 +21,7 @@
 {% block scripts %}{% endblock scripts %}
 
 <nav class="navbar navbar-expand-md navbar-light bg-light">
-    <a class="navbar-brand" href="/"><img src="{% static '/logo.png' %}">Fadderjobb</a>
+    <a class="navbar-brand" href="/">Fadderjobb</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
