--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,14 @@
 {% endblock head %}
 
 {% block content %}
-<h1>Välkommen</h1>
+    <h1>Välkommen</h1>
 
-...till STABENs fadderjobbsida! Här kan du anmäla dig till fadderjobb och se vilka pass andra faddrar har tagit.
+    <p>
+        ...till STABENs fadderjobbsida! Här kan du anmäla dig till fadderjobb och se vilka pass andra faddrar har tagit.
+    </p>
+
+    <p>
+        Hitta planerad funktionalitet, bakgrund och källkod på projektets
+        <a href="https://github.com/RoosDaniel/Fadderjobb" target="_blank">GitHub-repo</a>.
+    </p>
 {% endblock content %}
