--- a/templates/jobsignup.html
+++ b/templates/jobsignup.html
@@ -8,19 +8,79 @@
     <link rel="stylesheet" href="{% static 'css/jobsignup.css' %}">
 {% endblock head %}
 
+{% block scripts %}
+    <script src="{% static 'js/jobsignup.js' %}"></script>
+{% endblock scripts %}
+
 {% block content %}
     {% if user.is_staff %}
         <a href="{% url 'admin:fadderanmalan_job_add' %}" target="_blank">Lägg till nytt jobb</a>
     {% endif %}
 
-    <form action="{% url 'fadderanmalan:jobsignup' %}" method="get">
-        <div class="input-group mb-3 search-group">
-            <input type="text" class="form-control" placeholder="Jobbnamn" aria-label="Jobbnamn"
-                   aria-describedby="basic-addon2" name="search" value="{{ prev_search }}">
-            <div class="input-group-append">
-                <button class="btn btn-primary search-button" type="submit">Sök</button>
+    <form action="{% url 'fadderanmalan:jobsignup' %}" method="get" id="filter-container">
+        <input type="text" class="form-control" placeholder="Jobbnamn" aria-label="Jobbnamn"
+               aria-describedby="basic-addon2" name="search" value="{{ filter_search }}" id="filter-name">
+        <div class="filter-checkbox" id="filter-signedup">
+            <div>Anmäld:</div>
+            <div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-signedup-no" name="signedup" value="0"
+                    {% if filter_signedup == "0" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-signedup-no">Nej</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-signedup-yes" name="signedup" value="1"
+                    {% if filter_signedup == "1" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-signedup-yes">Ja</label>
+                </div>
             </div>
         </div>
+        <div class="filter-checkbox" id="filter-full">
+            <div>Fullt:</div>
+            <div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-full-no" name="full" value="0"
+                    {% if filter_full == "0" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-full-no">Nej</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-full-yes" name="full" value="1"
+                    {% if filter_full == "1" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-full-yes">Ja</label>
+                </div>
+            </div>
+        </div>
+        <div class="filter-checkbox" id="filter-leavequeue">
+            <div>Faddrar vill lämna:</div>
+            <div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-leavequeue-no" name="leavequeue" value="0"
+                    {% if filter_leavequeue == "0" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-leavequeue-no">Nej</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-leavequeue-yes" name="leavequeue" value="1"
+                    {% if filter_leavequeue == "1" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-leavequeue-yes">Ja</label>
+                </div>
+            </div>
+        </div>
+        <div class="filter-checkbox" id="filter-enterqueue">
+            <div>Faddrar köar:</div>
+            <div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-enterqueue-no" name="enterqueue" value="0"
+                    {% if filter_enterqueue == "0" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-enterqueue-no">Nej</label>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="filter-enterqueue-yes" name="enterqueue" value="1"
+                    {% if filter_enterqueue == "1" %}checked{% endif %}>
+                    <label class="form-check-label" for="filter-enterqueue-yes">Ja</label>
+                </div>
+            </div>
+        </div>
+        <button class="btn btn-primary search-button" type="submit">Sök</button>
     </form>
 
     {% for day, jobs in day_grouped.items %}
@@ -30,8 +90,37 @@
                 <a href="{% url 'fadderanmalan:jobsignup_detail' job.slug %}"
                    class="job {{ job.full_status }} {{ job.locked_status }}">
                     <div class="job-title">
-                        <h3>{{ job.short_name }}</h3>
-                        <small>{{ job.fadders.count }}/{{ job.slots }}</small>
+                        <h3>
+                            {% if request.user.is_authenticated and request.user.fadder in job.fadders.all %}
+                                <i class="far fa-check-circle"
+                                   data-toggle="tooltip" data-placement="left" title="Du är registrerad på jobbet">
+                                </i>
+                            {% endif %}
+                            {{ job.short_name }}
+                        </h3>
+                        <div class="job-status">
+                            {% if job.has_enter_queue %}
+                                <i class="fas fa-caret-square-right"
+                                   data-toggle="tooltip" data-placement="left" title="Faddrar köar för jobbet">
+                                </i>{{ " " }}
+                            {% endif %}
+                            {% if job.has_leave_queue %}
+                                <i class="fas fa-caret-square-left"
+                                   data-toggle="tooltip" data-placement="left" title="Faddrar vill lämna jobbet">
+                                </i>{{ " " }}
+                            {% endif %}
+                            {% if job.full %}
+                                <i class="fas fa-ban"
+                                   data-toggle="tooltip" data-placement="left" title="Jobbet är fullt">
+                                </i>{{ " " }}
+                            {% endif %}
+                            {% if job.locked %}
+                                <i class="fas fa-lock"
+                                   data-toggle="tooltip" data-placement="left" title="Jobbet är låst">
+                                </i>{{ " " }}
+                            {% endif %}
+                            {{ job.fadders.count }}/{{ job.slots }}
+                        </div>
                     </div>
                     <div class="job-body">{{ job.short_desc }}</div>
                 </a>
