Change button name

--- a/templates/jobsignup.html
+++ b/templates/jobsignup.html
@@ -89,7 +89,7 @@
                 {% endfor %}
             </select>
         </div>
-        <button class="btn btn-primary search-button" type="submit">Sök</button>
+        <button class="btn btn-primary filter-button" type="submit">Filtrera</button>
     </form>
 
     {% for day, jobs in day_grouped.items %}
